# baseline

./: .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  notes.txt  setup.cfg  setup.py  tox.ini
baseline/: __about__.py  __init__.py  __main__.py  _baseline.py  _script.py  _transforms.py
baseline/tests/: ascii.py  endswith.py  indents.py  multiline.py  raw.py  simple.py  singleline.py  special.py  specialchars.py  stripped.py  test_baseline.py  whitespace.py
docs/: Makefile  about.rst  api_reference.rst  changelog.rst  conf.py  index.rst  install.rst  installation.rst  make.bat  release_notes.rst  requirements.txt  usage.rst  userguide.rst
tests/: __init__.py  __main__.py  endswith.py  indents.py  raw.py  runtests.py  simple.py  special.py  test_baseline.py  whitespace.py
