[metadata]
long_description = file: README.rst, CHANGES.rst
keywords = baseline
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Text Processing

[options]
python_requires = >=2.7.0,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
setup_requires =
    setuptools>=38.5.2
install_requires =
    setuptools>=38.5.2
    enum34>=1.1.6;python_version<'3.0'
packages = baseline
zip_safe = True

[options.entry_points]
console_scripts =
    baseline = baseline.__main__:main

[options.extras_require]
doc =
    Sphinx>=1.5.3
test =
    unittest2;python_version<'3.0'
    mock;python_version<'3.0'
    nose

[sdist]
formats = zip

[bdist_wheel]
universal = 1

# include_package_data=True,
# zip_safe=False,
# test_suite='nose.collector',
