[metadata]
long_description = file: README.rst, CHANGES.rst
keywords = compare baseline string test
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Text Processing

[options]
python_requires = >=2.7.0,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
setup_requires =
    setuptools>=39.0.1
install_requires =
    setuptools>=39.0.1
    enum34>=1.1.6;python_version<'3.0'
packages = find:
zip_safe = True
# include_package_data = True,

[options.packages.find]
include = baseline, baseline.*

[options.entry_points]
console_scripts =
    baseline = baseline.__main__:main

[options.extras_require]
doc =
    Sphinx>=1.6.7
    sphinx_rtd_theme
    sphinxcontrib-programoutput
test =
    unittest2;python_version<'3.0'
    mock>=2.0.0;python_version<'3.0'
    nose

[sdist]
formats = zip

[bdist_wheel]
universal = True

[build_sphinx]
source-dir = docs
build-dir = docs/_build
builder = html
all_files = True
warning-is-error = True
